added contact form

--- a/about.html
+++ b/about.html
@@ -40,9 +40,9 @@
 
          <!-- font awesome deck of cards -->
 
-         <div class="cards">
+         <!-- <div class="cards">
             <i class="fa-thin fa-cards-blank"></i>
-        </div>
+        </div> -->
 
     </nav>
     
