updated changes; removed audio embed

--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,8 @@
 <body>
 
     <div class="wrapper">
+        
+        <!-- header -->
         <header class="full-width">
             <!-- <font awesome moon!--  -->
             <div class="moon">
