--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
     <div class="wrapper">
         <header class="full-width">
             <!-- <font awesome moon!--  -->
+
             <div class="moon">
-                <i class="fa-sharp fa-solid fa-moon"></i>
+            <i class="fa-sharp fa-solid fa-moon"></i>
             </div>
+
             <h1>Welcome</h1>
 
             <!-- navigation bar -->
@@ -40,22 +42,20 @@
                 <div class="about"><a href="./about.html">About</a>
             </nav>
 
+            <!-- <div class="audio">
+                audio sound
+                <audio controls>
+                    <source src="./audio/bensound-seaofclouds.mp3" type="audio/mp3">
+                    Your browser does not support this audio tag.
+                </audio>
+            </div> -->
+        
         </header>
 
-        <div class="audio">
-            <!-- audio sound -->
-            <audio controls>
-                <source src="./audio/bensound-seaofclouds.mp3" type="audio/mp3">
-                Your browser does not support this audio tag.
-            </audio>
-        </div>
-
         <aside class="float-right">
-
         </aside>
 
         <section class="float-left">
-
         </section>
 
         <div class="video">
