sticky nav and embedded map, other changes

--- a/something.html
+++ b/something.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,6 +15,7 @@
     <!-- font awesome link  -->
     <script src="https://kit.fontawesome.com/9fea9e80f9.js" crossorigin="anonymous"></script>
 
+    <!-- link to stylesheet.css -->
     <link rel="stylesheet" href="./css/css">
     <title>FinalProject</title>
 </head>
@@ -24,8 +24,8 @@
 
     <div class="wrapper">
         <header class="full-width">
-
             <!-- <font awesome moon!--  -->
+
             <div class="moon">
                 <i class="fa-sharp fa-solid fa-moon"></i>
             </div>
@@ -41,20 +41,79 @@
                 <div class="about"><a href="./about.html">About</a>
             </nav>
 
+            <!-- <div class="audio">
+                audio sound
+                <audio controls>
+                    <source src="./audio/bensound-seaofclouds.mp3" type="audio/mp3">
+                    Your browser does not support this audio tag.
+                </audio>
+            </div> -->
+
         </header>
     </div>
 
-        <div class="info">
-            <div class="photo">
-
+        <div class="full-width middle">
+            
+            <!-- <div class="box1">
+                <div></div>
+                <div></div>
             </div>
+
+            <div class="box2">
+                <div></div>
+                <div></div>
+            </div>
+
+            <div class="box3">
+                <div></div>
+                <div></div>
+            </div> -->
+
+            <!-- <div class="box4">
+                <div></div>
+                <div></div>
+            </div>
+
+            <div class="box5">
+                <div></div>
+                <div></div>
+            </div>
+
+            <div class="box6">
+                <div></div>
+                <div></div>
+            </div>
+
+            <div class="box7">
+                <div></div>
+                <div></div>
+            </div>
+
+            <div class="box8">
+                <div></div>
+                <div></div>
+
+            </div> -->
+
+
+            <!-- <aside class="float-right">
+        </aside>
+
+        <section class="float-left">
+        </section> -->
+
         </div>
 
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d51003.978464698775!2d-120.14386748808766!3d36.96805930791204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80940b92fdc6db03%3A0x36c342da22e76910!2sMadera%2C%20CA!5e0!3m2!1sen!2sus!4v1666762806458!5m2!1sen!2sus"
-            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="video">
 
+            <!-- youtube video embed -->
+            <center><iframe width="560" height="315" src="https://www.youtube.com/embed/4wtG01ymIjE"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe></center>
+
+
+        </div>
 
         <footer class="full-width">
             <div class="foot">
@@ -69,9 +128,9 @@
                     <a href="https:www.facebook.com" target="_blank">Facebook</a>
                 </div>
             </div>
-
         </footer>
-    
+
+
 </body>
 
 </html>
