final updates before presentation

--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
 
     <div class="full-width middle">
 
-        <div class="box1 box">
-            <div></div>
+        <div class="box">
             <div class="deck deck1">Earth Magic</div>
+
+            <!-- <div class="box1"><img src="./img/EarthMagic.jpg" alt=""></div> -->
+
         </div>
 
         <div class="box2 box">
