last minute edit

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://kit.fontawesome.com/9fea9e80f9.js" crossorigin="anonymous"></script>
 
     <!-- link to stylesheet.css -->
-    <link rel="stylesheet" href="./css/css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>FinalProject</title>
 </head>
 
