--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <!-- font awesome link  -->
     <script src="https://kit.fontawesome.com/9fea9e80f9.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="./css/css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>FinalProject</title>
 </head>
 
