--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 
         </div>
 
-        <img class="tree" src="/img/jeremy-bishop-EwKXn5CapA4-unsplash.jpg" alt="big green tree">
+        <img class="tree" src="./img/jeremy-bishop-EwKXn5CapA4-unsplash.jpg" alt="big green tree">
         Photo by <a
             href="https://unsplash.com/@jeremybishop?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Jeremy
             Bishop</a> on <a
