--- a/about.html
+++ b/about.html
@@ -81,12 +81,12 @@
             <div class="insta">
                 <!-- instagram icon -->
                 <i class="fa-brands fa-instagram"></i>
-                <a href="https:www.instagram.com" target="_blank">Instagram</a>
+                <a href="https://www.instagram.com/" target="_blank">Instagram</a>
             </div>
             <div class="fb">
                 <!-- facebook icon -->
                 <i class="fa-brands fa-square-facebook"></i>
-                <a href="https:www.facebook.com" target="_blank">Facebook</a>
+                <a href="https://www.facebook.com/" target="_blank">Facebook</a>
             </div>
         </div>
 
